# Dojo

./: README.md
CeleryJob/: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
CeleryJob/.docker-conf/rabbitmq/data/: .erlang.cookie
CeleryJob/.docker-conf/rabbitmq/data/mnesia/rabbit@50fb017949da/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_durable_queue.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCD  rabbit_user_permission.DCL  rabbit_vhost.DCD
CeleryJob/.docker-conf/rabbitmq/data/mnesia/rabbit@6cbe55e42013/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_queue.DCL  rabbit_user.DCL  rabbit_vhost.DCL
CeleryJob/.docker-conf/rabbitmq/data/mnesia/rabbit@6cbe55e42013/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_persistent/: file_summary.ets  msg_store_index.ets
CeleryJob/.docker-conf/rabbitmq/data/mnesia/rabbit@6cbe55e42013/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/msg_store_transient/: file_summary.ets  msg_store_index.ets
CeleryJob/.docker-conf/rabbitmq/data/mnesia/rabbit@6e35b257ab2a/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_durable_queue.DCD  rabbit_durable_route.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCD  rabbit_user_permission.DCL  rabbit_vhost.DCD
CeleryJob/.docker-conf/rabbitmq/data/mnesia/rabbit@6e35b257ab2a/msg_stores/vhosts/628WB79CIFDYO9LJI6DKMI09L/queues/7QOD4BW7X3SG5EP7Q4RSTESRB/: 0.idx
CeleryJob/.docker-conf/rabbitmq/log/: erl_crash.dump
CoinConverter/: .gitignore  README.md  build.gradle.kts  (+2 more)
(+56 files in other folders)
