[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["engra <eng.raphaelsn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
amqp = "5.1.1"
billiard = "3.6.4.0"
celery = "5.2.7"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
colorama = "0.4.5"
flower = "1.0.0"
humanize = "4.2.0"
kombu = "5.2.4"
prometheus-client = "0.14.1"
prompt-toolkit = "3.0.29"
pytz = "2022.1"
six = "1.16.0"
tornado = "6.1"
vine = "5.0.0"
wcwidth = "0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
